front.yml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
  namespace: app
spec:
  selector:
    app: front
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: natin56y/front:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
