postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: storage
              mountPath: /data/db
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: postgres-pvc
